Add the dashboard for the blog

--- a/resources/views/front/pages/about.twig
+++ b/resources/views/front/pages/about.twig
@@ -1,9 +1,9 @@
-{% extends "default.twig" %}
+{% extends "layouts/default.twig" %}
 
 {% block title %}A Propos{% endblock %}
 
 {% block content %}
-
+    <h1>A Propos</h1>
 {% endblock %}
 
 {% block script %}
