--- a/resources/views/front/pages/home.twig
+++ b/resources/views/front/pages/home.twig
@@ -1,9 +1,9 @@
-{% extends "default.twig" %}
+{% extends "layouts/default.twig" %}
 
 {% block title %}Accueil{% endblock %}
 
 {% block content %}
-
+    <h1>Accueil</h1>
 {% endblock %}
 
 {% block script %}
