--- a/resources/views/front/posts/show.twig
+++ b/resources/views/front/posts/show.twig
@@ -1,9 +1,9 @@
-{% extends "default.twig" %}
+{% extends "layouts/default.twig" %}
 
 {% block title %}Article{% endblock %}
 
 {% block content %}
-
+    Article titre
 {% endblock %}
 
 {% block script %}
