--- a/resources/views/front/pages/about.twig
+++ b/resources/views/front/pages/about.twig
@@ -3,9 +3,100 @@
 {% block title %}A Propos{% endblock %}
 
 {% block content %}
-    <h1>A Propos</h1>
+    <div class="section pt-6">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="text-center">
+                        <img src="images/aboutme_1.jpg" alt="" />
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="mt-13 hidden-sm hidden-xs hidden-tablet"></div>
+                    <div class="section-title fw-normal fz-64 fz-xs-35 lh-70 lh-xs-40 pt-3">
+                        Bonjour, moi c'est
+                        <strong>Sébastien</strong><br />je suis<br />
+                        <div id="typed-strings">
+                            <p>Développeur</p>
+                            <p>Concepteur</p>
+                            <p>Intégrateur</p>
+                            <p>Blogger</p>
+                        </div>
+                        <span id="typed" class="color fw-bolder"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="section pt-7 pb-7">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="text-center mb-7">
+                        <h2 class="section-title uppercase fw-bolder fz-24 lh-24 ls-2 mb-2">Mes supers pouvoirs</h2>
+                        <div class="heading-line mt-1">
+                            <div class="heading-line-inner-3"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3 col-sm-6">
+                    <div class="block-piechart mb-3 text-center">
+                        <div data-value="40" class="piechart"></div>
+                        <div class="clearfix">
+                            <h4 class="mt-2">GNU/Linux</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="block-piechart mb-3 text-center">
+                        <div data-value="55" class="piechart"></div>
+                        <div class="clearfix">
+                            <h4 class="mt-2">javascrit</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="block-piechart mb-3 text-center">
+                        <div data-value="65" class="piechart"></div>
+                        <div class="clearfix">
+                            <h4 class="mt-2">PHP</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="block-piechart mb-3 text-center">
+                        <div data-value="80" class="piechart"></div>
+                        <div class="clearfix">
+                            <h4 class="mt-2">HTML/CSS</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block script %}
-
+    <script type="text/javascript" src="http://netadn.dev/js/jquery.min.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/jquery-migrate.min.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/modernizr-2.7.1.min.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/owl.carousel.min.js"></script>
+    <script type='text/javascript' src='http://netadn.dev/js/waypoints.min.js'></script>
+    <script type="text/javascript" src="http://netadn.dev/js/jquery.mousewheel.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/jquery.jscrollpane.min.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/jquery.equalheights.min.js"></script>
+    <script type='text/javascript' src='http://netadn.dev/js/slick.min.js'></script>
+    <script type="text/javascript" src="http://netadn.dev/js/imagesloaded.pkgd.min.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/isotope.pkgd.min.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/jquery.isotope.init.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/functions.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/script.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/bootstrap-progressbar.min.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/progressbar.min.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/typed.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/jquery.hoverdir.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/jquery.magnific-popup.min.js"></script>
 {% endblock %}
