--- a/resources/views/front/elements/nav.twig
+++ b/resources/views/front/elements/nav.twig
@@ -11,8 +11,6 @@
                 <div class="header-top-social-icons text-right">
                     <a class="link" href="#"><i class="fa fa-facebook"></i></a>
                     <a class="link" href="#"><i class="fa fa-twitter"></i></a>
-                    <a class="link" href="#"><i class="fa fa-instagram"></i></a>
-                    <a class="link" href="#"><i class="fa fa-youtube"></i></a>
                     <a class="link" href="#"><i class="fa fa-linkedin"></i></a>
                     <a class="link" href="#"><i class="fa fa-google-plus"></i></a>
                 </div>
@@ -22,8 +20,8 @@
             <div class="col-sm-12">
                 <div id="logo">
                     <a href="{{ path('pages.home') }}">
-                        <img src="images/logo.png" alt="NetADN" class="logo">
-                        <img src="images/logo.png" alt="NetADN" class="logo-scroll">
+                        <img src="http://netadn.dev/images/logo.png" alt="NetADN" class="logo">
+                        <img src="http://netadn.dev/images/logo.png" alt="NetADN" class="logo-scroll">
                     </a>
                     <div class="mobile-icon">
                         <div class="hamburger">
@@ -52,9 +50,6 @@
                     <ul class="menu">
                         <li class="">
                             <a href="{{ path('pages.home') }}">Accueil</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('pages.services') }}">Services</a>
                         </li>
                         <li>
                             <a href="{{ path('posts.index') }}">Blog</a>
