--- a/resources/views/front/elements/slider.twig
+++ b/resources/views/front/elements/slider.twig
@@ -7,7 +7,7 @@
                         <!-- SLIDE  -->
                         <li data-transition="notransition" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="default" data-thumb="images/slider/slider_100x50.jpg" data-rotate="0" data-saveperformance="off" data-title="Slide">
 
-                            <img src="images/moved/bg_slide_1.jpg"  alt="" />
+                            <img src="images/slider/bg_slide_1.jpg"  alt="" />
 
                             <!-- LAYER NR. 1 -->
                             <div class="tp-caption caption-Raleway-15"
@@ -20,7 +20,7 @@
                                  data-textAlign="['left','left','left','left']"
                                  data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
                                  data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]">
-                                No more limitations
+                                je crée des sites internet
                             </div>
 
                             <!-- LAYER NR. 2 -->
@@ -36,7 +36,7 @@
                                  data-textAlign="['left','left','left','left']"
                                  data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
                                  data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]">
-                                No limits to your imagination
+                                Sébastien Martinez
                             </div>
 
                             <!-- LAYER NR. 3 -->
@@ -51,10 +51,11 @@
                                  data-textAlign="['left','left','left','left']"
                                  data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
                                  data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]">
-                                <span class="color">Enjoy</span> the difference
+                                un<span class="color">dévoloppeur</span> sans limite
                             </div>
 
                             <!-- LAYER NR. 4 -->
+                            <a href="{{ path('contact.index') }}">
                             <div class="tp-caption rev-btn btn-white"
                                  data-x="['left','left','left','center']" data-hoffset="['10','10','9','-97']"
                                  data-y="['middle','middle','middle','middle']" data-voffset="['15','15','75','60']"
@@ -65,10 +66,13 @@
                                  data-textAlign="['left','left','left','left']"
                                  data-paddingtop="[13,13,13,13]" data-paddingright="[30,30,30,30]"
                                  data-paddingbottom="[13,13,13,13]" data-paddingleft="[30,30,30,30]">
-                                PURCHASE NOW
+                                 CONTACTEZ-MOI
                             </div>
+                            </a>
 
                             <!-- LAYER NR. 5 -->
+
+                            <a href="{{ path('pages.services') }}">
                             <div class="tp-caption rev-btn btn-dark"
                                  data-x="['left','left','left','center']" data-hoffset="['229','229','229','106']"
                                  data-y="['middle','middle','middle','middle']" data-voffset="['15','15','75','60']"
@@ -78,85 +82,9 @@
                                  data-textAlign="['left','left','left','left']"
                                  data-paddingtop="[13,13,13,13]" data-paddingright="[30,30,30,30]"
                                  data-paddingbottom="[13,13,13,13]" data-paddingleft="[30,30,30,30]">
-                                DISCOVER MORE
+                                CURRICULUM VITAE
                             </div>
-                        </li>
-                        <!-- SLIDE  -->
-                        <li data-transition="slideremoveleft" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="default" data-thumb="images/slider/slider_100x50.jpg" data-rotate="0" data-saveperformance="off" data-title="Slide">
-
-                            <img src="images/moved/bg_slide_2.jpg" alt="" />
-
-                            <!-- LAYER NR. 6 -->
-                            <div class="tp-caption caption-Raleway-15"
-                                 data-x="['left','left','left','center']" data-hoffset="['10','10','10','0']"
-                                 data-y="['middle','middle','middle','middle']" data-voffset="['-190','-190','-190','-70']"
-                                 data-color="['rgba(153, 153, 153, 1.00)','rgba(153, 153, 153, 1.00)','rgba(153, 153, 153, 1.00)','rgba(187, 187, 187, 1.00)']"
-                                 data-width="none" data-height="none" data-whitespace="nowrap"
-                                 data-type="text" data-responsive_offset="on"
-                                 data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","speed":2000,"to":"o:1;","delay":1000,"ease":"Power4.easeInOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"nothing"}]'
-                                 data-textAlign="['left','left','left','left']"
-                                 data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
-                                 data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]">
-                                New world is calling
-                            </div>
-
-                            <!-- LAYER NR. 7 -->
-                            <div class="tp-caption caption-Raleway-60"
-                                 data-x="['left','left','left','center']" data-hoffset="['10','10','10','0']"
-                                 data-y="['middle','middle','middle','middle']" data-voffset="['-140','-140','-40','-40']"
-                                 data-fontsize="['60','60','40','26']"
-                                 data-lineheight="['60','60','40','26']"
-                                 data-width="none" data-height="none"
-                                 data-whitespace="nowrap" data-type="text"
-                                 data-responsive_offset="on"
-                                 data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","speed":2000,"to":"o:1;","delay":2000,"ease":"Power4.easeInOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"nothing"}]'
-                                 data-textAlign="['left','left','left','left']"
-                                 data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
-                                 data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]">
-                                Be part of amazing things
-                            </div>
-
-                            <!-- LAYER NR. 8 -->
-                            <div class="tp-caption caption-Raleway-60"
-                                 data-x="['left','left','left','center']" data-hoffset="['10','10','10','0']"
-                                 data-y="['middle','middle','middle','middle']" data-voffset="['-68','-68','2','2']"
-                                 data-fontsize="['60','60','40','26']"
-                                 data-lineheight="['60','60','40','26']"
-                                 data-width="none" data-height="none" data-whitespace="nowrap"
-                                 data-type="text" data-responsive_offset="on"
-                                 data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","speed":2000,"to":"o:1;","delay":3000,"ease":"Power4.easeInOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"nothing"}]'
-                                 data-textAlign="['left','left','left','left']"
-                                 data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
-                                 data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]">
-                                <span class="color">Choose</span> Kameleon
-                            </div>
-
-                            <!-- LAYER NR. 4 -->
-                            <div class="tp-caption rev-btn btn-white"
-                                 data-x="['left','left','left','center']" data-hoffset="['10','10','9','-97']"
-                                 data-y="['middle','middle','middle','middle']" data-voffset="['15','15','75','60']"
-                                 data-width="none" data-height="none" data-whitespace="nowrap"
-                                 data-type="button" data-responsive_offset="on"
-                                 data-responsive="off"
-                                 data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","speed":2000,"to":"o:1;","delay":4000,"ease":"Power4.easeInOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"nothing"},{"frame":"hover","speed":"300","ease":"Power0.easeIn","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(255, 255, 255, 1.00);bg:rgba(2, 2, 2, 1.00);bc:rgba(2, 2, 2, 1.00);bw:1px 1px 1px 1px;"}]'
-                                 data-textAlign="['left','left','left','left']"
-                                 data-paddingtop="[13,13,13,13]" data-paddingright="[30,30,30,30]"
-                                 data-paddingbottom="[13,13,13,13]" data-paddingleft="[30,30,30,30]">
-                                PURCHASE NOW
-                            </div>
-
-                            <!-- LAYER NR. 5 -->
-                            <div class="tp-caption rev-btn btn-dark"
-                                 data-x="['left','left','left','center']" data-hoffset="['229','229','229','106']"
-                                 data-y="['middle','middle','middle','middle']" data-voffset="['15','15','75','60']"
-                                 data-width="none" data-height="none" data-whitespace="nowrap"
-                                 data-type="button" data-responsive_offset="on" data-responsive="off"
-                                 data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","speed":2000,"to":"o:1;","delay":4500,"ease":"Power4.easeInOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"nothing"},{"frame":"hover","speed":"300","ease":"Power0.easeIn","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(255, 255, 255, 1.00);bg:rgba(0, 130, 153, 1.00);bc:rgba(0, 130, 153, 1.00);bw:1px 1px 1px 1px;"}]'
-                                 data-textAlign="['left','left','left','left']"
-                                 data-paddingtop="[13,13,13,13]" data-paddingright="[30,30,30,30]"
-                                 data-paddingbottom="[13,13,13,13]" data-paddingleft="[30,30,30,30]">
-                                DISCOVER MORE
-                            </div>
+                            </a>
                         </li>
                     </ul>
                 </div>
