--- a/resources/views/layouts/admin.twig
+++ b/resources/views/layouts/admin.twig
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="http://netadn.dev/favicon.ico">
 
     <title>{% block title %}{% endblock %} | Dashboard</title>
     {{ style('admin.css') }}
@@ -32,8 +32,5 @@
 
     </div>
 </div>
-
-
-{{ script('admin.js') }}
 </body>
 </html>
