--- a/resources/views/layouts/default.twig
+++ b/resources/views/layouts/default.twig
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-    <link rel="shortcut icon" href="favicon.ico"/>
+    <link rel="shortcut icon" href="http://netadn.dev/favicon.ico"/>
     <title>{% block title %}{% endblock %} NetADN</title>
     {% block style %}
         {{ style('app.css') }}
@@ -32,20 +32,22 @@
 
 {# script('app.js') #}
 {% block script %}
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/modernizr-2.7.1.min.js"></script>
-    <script type="text/javascript" src="js/owl.carousel.min.js"></script>
-    <script type='text/javascript' src='js/waypoints.min.js'></script>
-    <script type="text/javascript" src="js/jquery.mousewheel.js"></script>
-    <script type="text/javascript" src="js/jquery.jscrollpane.min.js"></script>
-    <script type="text/javascript" src="js/jquery.equalheights.min.js"></script>
-    <script type='text/javascript' src='js/jquery.prettyPhoto.js'></script>
-    <script type='text/javascript' src='js/jquery.prettyPhoto.init.min.js'></script>
-    <script type="text/javascript" src="js/jquery.fitvids.js"></script>
-    <script type='text/javascript' src='js/slick.min.js'></script>
-    <script type="text/javascript" src="js/functions.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/jquery.min.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/jquery-migrate.min.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/modernizr-2.7.1.min.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/owl.carousel.min.js"></script>
+    <script type='text/javascript' src='http://netadn.dev/js/waypoints.min.js'></script>
+    <script type="text/javascript" src="http://netadn.dev/js/jquery.mousewheel.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/jquery.jscrollpane.min.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/jquery.equalheights.min.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/jquery.fitvids.js"></script>
+    <script type='text/javascript' src='http://netadn.dev/js/slick.min.js'></script>
+    <script type="text/javascript" src="http://netadn.dev/js/imagesloaded.pkgd.min.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/isotope.pkgd.min.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/jquery.isotope.init.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/functions.js"></script>
+    <script type="text/javascript" src="http://netadn.dev/js/script.js"></script>
 {% endblock %}
 </body>
 </html>
